# joy

./: .gitignore  CMakeLists.txt  ffmpeg.cpp  globalComm.cpp  hello.cu  imageProcess.cu  imageProcess.h  main.cpp
context/: baseContext.h  baseTensor.h  contextDoer_arcFace.h  contextDoer_handPoseX.h  contextDoer_scrfd.h  contextDoer_yolov8Cls.h  contextDoer_yolov8Detect.h  contextDoer_yolov8Pose.h  contextDoer_yolov8Seg.h  macro.h
example/: example_arcFace.h  example_ffmpeg.h  example_handPoseX.h  example_scrfd.h  example_yolov8Cls.h  example_yolov8Detect.h  example_yolov8Pose.h  example_yolov8Seg.h
manager/: gpuManager.h  gpuThread.h
model/: baseModel.h  model_handPoseX.h  model_yolov8Detect.h  templateModel.h
tools/: CustomSink.h  cudaBandWidthTest.hpp  facePreprocess.h  face_align.h  ffmpeg.h  ffmpgeDecoderWithCPU.h  ffmpgeDecoderWithGPU.h  globalComm.h  preProcess.h
